# hack-game-state-service

./: .travis.yml  README.md  build-flatpak.sh  com.endlessm.GameStateService.json.in  com.endlessm.GameStateService.service.in  com.hack_computer.GameStateService.json.in  com.hack_computer.GameStateService.service.in  examples.py  game-state-service  meson.build
data/: com.endlessm.GameStateService.appdata.xml  com.hack_computer.GameStateService.metainfo.xml  meson.build
tools/: build-local-flatpak.sh
